--- a/DockerFile
+++ b/DockerFile
@@ -1,23 +1,44 @@
-# GPU-enabled base image
+# ================================================
+# YOLOv8 Development Dockerfile (GPU + OpenCV)
+# ================================================
+
+# Use NVIDIA CUDA base image for GPU support
 FROM nvidia/cuda:12.4.1-base-ubuntu22.04
 
+# Avoid interactive prompts during package installs
 ENV DEBIAN_FRONTEND=noninteractive
 
-# Install system tools
-RUN apt-get update && apt-get install -y python3 python3-pip git
+# -----------------------------
+# Install system dependencies
+# -----------------------------
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    python3 \
+    python3-pip \
+    python3-dev \
+    git \
+    curl \
+    libgl1 \
+    libglib2.0-0 \
+    && rm -rf /var/lib/apt/lists/*
 
-# Install PyTorch with CUDA support
-RUN pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu121
+# Upgrade pip
+RUN python3 -m pip install --upgrade pip
 
-# Copy your repository into /app
+# Set working directory inside container
 WORKDIR /app
-COPY . /app
 
-# Install YOLOv8 in editable mode so your source edits take effect immediately
+# Copy your local YOLOv8 repo into the container
+# Assuming you have cloned ultralytics/YOLOv8 inside your project folder
+COPY ./ultralytics ./ultralytics
+
+# Install YOLOv8 in editable mode for live development
 RUN pip install -e ./ultralytics
 
-# Install some common libraries for training and visualization
-RUN pip install opencv-python matplotlib seaborn tqdm
+# Install additional Python libraries commonly used for training / visualization
+RUN pip install matplotlib seaborn pandas tqdm opencv-python-headless
 
-# Default command when container starts
-CMD ["bash"]
+# Expose port if needed (for web dashboards, optional)
+EXPOSE 8888
+
+# Set default command to launch bash
+CMD ["/bin/bash"]
